remove old payload and update to jdk17